--- a/index.html
+++ b/index.html
@@ -677,8 +677,8 @@
             </div>
             <div class="row pt-5 justify-content-center">
                 <div class="row align-items-center b-tab active pb-5" id="Binof">
-                    <div class="col-sm-12 col-md-12 col-lg-5 me-auto text-center tabs-lg-col">
-                        <img src="images/our-ptoduct/binof.png" class="img-fluid tabs-lg-img" alt="not-found">
+                    <div class="col-sm-12 col-md-12 col-lg-5 me-auto text-center ">
+                        <img src="images/our-ptoduct/large-icons (5).png" class="img-fluid tabs-lg-img" alt="not-found">
                     </div>
                     <div class="col-sm-12 col-md-12 col-lg-5 offset-lg-1">
                         <h1 class="display-1">About</h1>
@@ -701,8 +701,8 @@
                     </div>
                 </div>
                 <div class="row align-items-center b-tab pb-5" id="pos">
-                    <div class="col-sm-12 col-md-12 col-lg-5 me-auto text-center tabs-lg-col">
-                        <img src="images/our-ptoduct/pos-l.png" class="img-fluid tabs-lg-img" alt="not-found">
+                    <div class="col-sm-12 col-md-12 col-lg-5 me-auto text-center ">
+                        <img src="images/our-ptoduct/large-icons (7).png" class="img-fluid tabs-lg-img" alt="not-found">
                     </div>
                     <div class="col-sm-12 col-md-12 col-lg-5 offset-lg-1">
                         <h1 class="display-1">About</h1>
@@ -724,8 +724,8 @@
                     </div>
                 </div>
                 <div class="row align-items-center b-tab pb-5" id="fajira">
-                    <div class="col-sm-12 col-md-12 col-lg-5 me-auto text-center tabs-lg-col">
-                        <img src="images/our-ptoduct/f-l.png" class="img-fluid tabs-lg-img" alt="not-found">
+                    <div class="col-sm-12 col-md-12 col-lg-5 me-auto text-center ">
+                        <img src="images/our-ptoduct/large-icons (6).png" class="img-fluid tabs-lg-img" alt="not-found">
                     </div>
                     <div class="col-sm-12 col-md-12 col-lg-5 offset-lg-1">
                         <h1 class="display-1">About</h1>
@@ -747,8 +747,8 @@
                     </div>
                 </div>
                 <div class="row align-items-center b-tab pb-5" id="beaswoknroll">
-                    <div class="col-sm-12 col-md-12 col-lg-5 me-auto text-center tabs-lg-col">
-                        <img src="images/our-ptoduct/beas-woknroll.png" class="img-fluid tabs-lg-img" alt="not-found">
+                    <div class="col-sm-12 col-md-12 col-lg-5 me-auto text-center ">
+                        <img src="images/our-ptoduct/large-icons (1).png" class="img-fluid tabs-lg-img" alt="not-found">
                     </div>
                     <div class="col-sm-12 col-md-12 col-lg-5 offset-lg-1">
                         <h1 class="display-1">About</h1>
@@ -772,17 +772,17 @@
                     </div>
                 </div>
                 <div class="col-sm-12 col-md-12 col-lg-5 me-auto text-center pt-5">
-                    <div href="#Binof" data-tab="Binof" class="b-nav-tab active">
-                        <img src="images/our-ptoduct/binof-s.png" class="img-fluid s-img-tabs" alt="not-found">
+                    <div href="#Binof" data-tab="Binof" class="b-nav-tab active ">
+                        <img src="images/our-ptoduct/small-icon(1).png" class="img-fluid s-img-tabs" alt="not-found">
                     </div>
                     <div href="#pos" data-tab="pos" class="b-nav-tab">
-                        <img src="images/our-ptoduct/pos.png" class="img-fluids s-img-tabs" alt="not-found">
+                        <img src="images/our-ptoduct/small-icon(2).png" class="img-fluid s-img-tabs" alt="not-found">
                     </div>
                     <div href="#fajira" data-tab="fajira" class="b-nav-tab">
-                        <img src="images/our-ptoduct/f-s.png" class="img-fluids s-img-tabs" alt="not-found">
+                        <img src="images/our-ptoduct/small-icon(3).png" class="img-fluid s-img-tabs" alt="not-found">
                     </div>
                     <div href="#beaswoknroll" data-tab="beaswoknroll" class="b-nav-tab">
-                        <img src="images/our-ptoduct/beas-woknroll-s.png" class="img-fluids s-img-tabs" alt="not-found">
+                        <img src="images/our-ptoduct/small-icon(4).png" class="img-fluid s-img-tabs" alt="not-found">
                     </div>
                 </div>
             </div>
