--- a/index.html
+++ b/index.html
@@ -173,7 +173,7 @@
                     </div>
                 </div>
                 <div class="lg">
-                    <a href="#" class="btn green-bg px-5 py-3">Get Started</a>
+                    <a href="#" class="btn green-bg">Get Started</a>
                 </div>
             </div>
         </div>
@@ -184,8 +184,8 @@
         <div class="col-sm-12 col-md-12 col-lg-10 mx-auto ">
             <div class="row align-items-center row-h">
                 <div class="col-lg-6 col-md-6">
-                    <h1 class="display-1"><span class="green-text">Digitize</span>Your Business to <span
-                            class="green-text">Monetize</span>
+                    <h1 class="display-1"><span class="green-text">Digitize </span>Your Business to <span
+                            class="green-text"> Monetize </span>
                         Your Ideas!
                     </h1>
                     <div class="col-4"><img src="images/Layer_1.png" alt="not-found" class="img-fluid"></div>
@@ -211,8 +211,8 @@
                                     form-control" placeholder="Enter Phone Number"
                                 style="border: none; background-color: rgba(239, 239, 239, 1);; padding: 25px 15px;"
                                 name="#" autocomplete="off">
-                            <input type="submit" value="Request Demo" class=" btn green-bg mt-3 mt-lg-0 py-3
-                                                                mt-md-0 px-4">
+                            <input type="submit" value="Request Demo" class=" btn green-bg mt-3 mt-lg-0
+                                                                mt-md-0">
                         </form>
                     </div>
                 </div>
@@ -274,7 +274,7 @@
                         is a contemporary <span class="green-text fw-bold text-decoration-underline">Online
                             Ordering System</span> designed to facilitate your customers access your
                         business and place their orders through your websites and mobile apps.</p>
-                    <a href="#" class="btn green-bg mt-5 px-5 py-3">Learn More <img
+                    <a href="#" class="btn green-bg mt-5">Learn More <img
                             src="images/what-fajira/external-link.png" alt="not-found" class="img-fluid"></a>
                 </div>
                 <div class="col-lg-5 col-md-6 col-sm-12 offset-lg-1  py-3">
@@ -323,7 +323,7 @@
             <div class="row">
                 <div class="col-sm-12 col-md-12 col-lg-8 text-center mx-auto">
                     <h1 class="display-1 position-relative">Our Unrivalled <span class="green-text">Features</span></h1>
-                    <span class="position-absolute" style="top: 77px; left: 463px;"><img src="images/Layer_1.png"
+                    <span class="position-absolute" style="top: 85px; left: 423px;"><img src="images/Layer_1.png"
                             class="img-fluid" alt="not-found"></span>
                     <p class="pt-5">These are a Few of Our Unrivalled Features that <span class="green-text fw-bold">All
                             Fajira Products</span> have in Common!</p>
@@ -457,7 +457,7 @@
             <div class="col-12 text-center">
                 <p class="fw-bold">Impressed Already?</p>
                 <p>This was just a glimpse of what we have to offer, Check out all of our features!</p>
-                <button class="green-bg px-5 py-4 btn" data-bs-toggle="collapse" data-bs-target="#collapseExample"
+                <button class="green-bg btn" data-bs-toggle="collapse" data-bs-target="#collapseExample"
                     aria-expanded="false" aria-controls="collapseExample">Show All Features</button>
             </div>
         </div>
@@ -469,9 +469,9 @@
             <div class="row">
                 <div class="col-12 text-center pb-5 mb-5">
                     <h1 class="display-2 position-relative">Unleash <span class="green-text">Cross-Platform
-                            Potential</span> with
+                            Potential </span> with
                         Fajira!</h1>
-                    <span class="position-absolute pb-5" style="top: 102px; left: 215px;">
+                    <span class="position-absolute pb-5" style="top: 114px; left: 215px;">
                         <img src="images/Platform Potential/Layer_1.png" class="img-fluid" alt="not-found">
                     </span>
                 </div>
@@ -525,7 +525,7 @@
                                     OS.</p>
                             </div>
                             <div class="content" id="linuex">
-                                <h3>Apps for linuex:</h3>
+                                <h3>Apps for linux:</h3>
                                 <p class="fs-2">We offer Apps for Android Smartphones & Tablets; that are compatible
                                     with all
                                     versions of
@@ -545,7 +545,7 @@
                 <div class="col-12 text-center pb-5">
                     <h1 class="display-2 position-relative">Adding Power to Fajira with <span
                             class="green-text">Integrations!</span></h1>
-                    <span class="position-absolute" style="top: 109px; right: 201px;">
+                    <span class="position-absolute" style="top: 120px; right: 201px;">
                         <img src="images/Layer_1.png" class="img-fluid" alt="not-found">
                     </span>
                 </div>
@@ -558,7 +558,7 @@
                             class="green-text fw-bold">50+
                             integrations,</span> seamlessly integrating with software and
                         applications for increased workflow efficiency.</p>
-                    <a href="#" class="btn green-bg mt-5 px-5 py-3">Explore All<img
+                    <a href="#" class="btn green-bg mt-5">Explore All<img
                             src="images/what-fajira/external-link.png" alt="not-found" class="img-fluid mx-3"></a>
                 </div>
                 <div class="col-sm-12 col-md-12 col-lg-6 offset-lg-1">
@@ -576,7 +576,7 @@
                     <img src="images/fajira-backs/back-fajira-bg.png" class="img-fluid" alt="not-found">
                 </div>
                 <div class="col-sm-12 col-md-12 col-lg-5 offset-lg-1" style="z-index: 9;">
-                    <h1 class="display-2">How <span class="green-text fw-bold">Fajira</span>Backs You!</h1>
+                    <h1 class="display-2">How <span class="green-text fw-bold">Fajira </span>Backs You!</h1>
                     <img src="images/Layer_1.png" class="img-fluid" alt="not-found">
                     <p class="py-5"><span class="green-text fw-bold">Fajira</span> doesn’t only offer you products that
                         are up to the
@@ -584,7 +584,7 @@
                         Maintenance services to back your business.</p>
                     <div class="card-1">
                         <div class="row align-items-center">
-                            <div class="col-2 text-end">
+                            <div class="col-2">
                                 <img src="images/fajira-backs/icons-3.png" class="img-fluid" alt="not-found">
                             </div>
                             <div class="col-10">
@@ -595,7 +595,7 @@
                     </div>
                     <div class="card-2">
                         <div class="row align-items-center">
-                            <div class="col-2 text-end">
+                            <div class="col-2">
                                 <img src="images/fajira-backs/icons-1.png" class="img-fluid" alt="not-found">
                             </div>
                             <div class="col-10">
@@ -606,7 +606,7 @@
                     </div>
                     <div class="card-3">
                         <div class="row align-items-center">
-                            <div class="col-2 text-end">
+                            <div class="col-2">
                                 <img src="images/fajira-backs/icons-2.png" class="img-fluid" alt="not-found">
                             </div>
                             <div class="col-10">
@@ -664,9 +664,9 @@
         <div class="col-sm-12 col-md-12 col-lg-10 mx-auto py-5">
             <div class="row justify-content-between align-items-center">
                 <div class="col-8 text-center pb-3">
-                    <h1 class="display-2 position-relative pb-5">Our<span class="green-text">Incredible</span>Products
+                    <h1 class="display-2 position-relative pb-5">Our <span class="green-text"> Incredible </span>Products
                     </h1>
-                    <span class="position-absolute" style="top: 100px; right: 565px;">
+                    <span class="position-absolute" style="top: 117px; right: 565px;">
                         <img src="images/Layer_1.png" class="img-fluid" alt="not-found">
                     </span>
                     <p>The <span class="fw-bold green-text">Fajira</span>
@@ -678,7 +678,7 @@
             <div class="row pt-5 justify-content-center">
                 <div class="row align-items-center b-tab active pb-5" id="Binof">
                     <div class="col-sm-12 col-md-12 col-lg-5 me-auto text-center ">
-                        <img src="images/our-ptoduct/large-icons (5).png" class="img-fluid tabs-lg-img" alt="not-found">
+                        <img src="images/our-ptoduct/large-icons (7).png" class="img-fluid tabs-lg-img" alt="not-found">
                     </div>
                     <div class="col-sm-12 col-md-12 col-lg-5 offset-lg-1">
                         <h1 class="display-1">About</h1>
@@ -702,7 +702,7 @@
                 </div>
                 <div class="row align-items-center b-tab pb-5" id="pos">
                     <div class="col-sm-12 col-md-12 col-lg-5 me-auto text-center ">
-                        <img src="images/our-ptoduct/large-icons (7).png" class="img-fluid tabs-lg-img" alt="not-found">
+                        <img src="images/our-ptoduct/large-icons (5).png" class="img-fluid tabs-lg-img" alt="not-found">
                     </div>
                     <div class="col-sm-12 col-md-12 col-lg-5 offset-lg-1">
                         <h1 class="display-1">About</h1>
@@ -773,10 +773,10 @@
                 </div>
                 <div class="col-sm-12 col-md-12 col-lg-5 me-auto text-center pt-5">
                     <div href="#Binof" data-tab="Binof" class="b-nav-tab active ">
-                        <img src="images/our-ptoduct/small-icon(1).png" class="img-fluid s-img-tabs" alt="not-found">
+                        <img src="images/our-ptoduct/small-icon(2).png" class="img-fluid s-img-tabs" alt="not-found">
                     </div>
                     <div href="#pos" data-tab="pos" class="b-nav-tab">
-                        <img src="images/our-ptoduct/small-icon(2).png" class="img-fluid s-img-tabs" alt="not-found">
+                        <img src="images/our-ptoduct/small-icon(1).png" class="img-fluid s-img-tabs" alt="not-found">
                     </div>
                     <div href="#fajira" data-tab="fajira" class="b-nav-tab">
                         <img src="images/our-ptoduct/small-icon(3).png" class="img-fluid s-img-tabs" alt="not-found">
