--- a/index.html
+++ b/index.html
@@ -157,7 +157,7 @@
                     <div class="menu-list">
                         <ul class="menu-nav">
                             <li class="nav-submenu">
-                                <div class="nav-business-name"><a href="">About Us</a> <span></span></div>
+                                <div class="nav-business-name"><a href="about-us.html">About Us</a> <span></span></div>
                             </li>
                         </ul>
                     </div>
@@ -833,7 +833,7 @@
                     <li class="nav-item"><a href="#" class="nav-link px-5 fs-3 text-dark">How it Works</a></li>
                     <li class="nav-item"><a href="#" class="nav-link px-5 fs-3 text-dark">Faq’s</a></li>
                     <li class="nav-item"><a href="#" class="nav-link px-5 fs-3 text-dark">Blog</a></li>
-                    <li class="nav-item"><a href="#" class="nav-link px-5 fs-3 text-dark">Contact us</a></li>
+                    <li class="nav-item"><a href="contact-us.html" class="nav-link px-5 fs-3 text-dark">Contact us</a></li>
                 </ul>
                 <div class="col-sm-12 col-md-12 col-lg-2 text-lg-end">
                     <a href=""><i class="fa-brands fa-linkedin mx-3" style="color:rgba(70, 168, 34, 1);"></i></a>
