--- a/index.html
+++ b/index.html
@@ -624,12 +624,12 @@
     <section class="container-fluid py-5 d-flex justify-content-center bg-fajira-Businesses">
         <div class="col-sm-12 col-md-12 col-lg-10 mx-auto py-5">
             <div class="row justify-content-between align-items-center">
-                <div class="col-sm-12 col-md-12 col-lg-8 text-center pb-3">
+                <div class="col-12 text-center pb-3">
                     <h1 class="display-2 position-relative pb-5">Fajira Welcomes these <span
                             class="green-text">Businesses!</span></h1>
-                    <span class="position-absolute" style="top: 78px; right: 45px;"><img src="images/Layer_1.png"
+                    <span class="position-absolute" style="top: 103px; right: 265px;"><img src="images/Layer_1.png"
                             class="img-fluid" alt="not-found"></span>
-                    <p>Fajira's success is due to its UNIVERSAL FIT,
+                    <p class="para-align">Fajira's success is due to its UNIVERSAL FIT,
                         meaning our business solution
                         caters to the needs of almost any retail
                         business that wants to go online.</p>
@@ -661,15 +661,15 @@
         }
     </style>
     <section class="container-fluid py-5 d-flex justify-content-center bg-product">
-        <div class="col-sm-12 col-md-12 col-lg-10 mx-auto py-5">
+        <div class="col-12 py-5">
             <div class="row justify-content-between align-items-center">
                 <div class="col-8 text-center pb-3">
-                    <h1 class="display-2 position-relative pb-5">Our <span class="green-text"> Incredible </span>Products
+                    <h1 class="display-2 position-relative">Our <span class="green-text"> Incredible </span>Products
                     </h1>
-                    <span class="position-absolute" style="top: 117px; right: 565px;">
+                    <span class="position-absolute" style="right: 719px;">
                         <img src="images/Layer_1.png" class="img-fluid" alt="not-found">
                     </span>
-                    <p>The <span class="fw-bold green-text">Fajira</span>
+                    <p class="pt-5 mt-4">The <span class="fw-bold green-text">Fajira</span>
                         Product Line offers
                         unmatched product solutions for a myrid of businesses, Such as Grocery Stores,
                         Pharmacies, E-Commerce Stores, Restaurants, Gyms and More.</p>
