--- a/contact-us.html
+++ b/contact-us.html
@@ -22,6 +22,14 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/assets/owl.carousel.min.css">
     <link rel="stylesheet"
         href="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/assets/owl.theme.default.min.css">
+
+    <style>
+        .form-control {
+            border: 1px solid #E0E0E0 !important;
+            border-radius: 10px !important;
+            padding: 24px 12px !important;
+        }
+    </style>
 </head>
 
 <body>
@@ -179,6 +187,116 @@
         </div>
     </header>
     <!----------------------End NAvbar Section  ------------------------>
+
+    <!------------------get in touch Section start  -------------------->
+    <section class="container-fluid py-5 d-flex justify-content-center">
+        <div class="col-sm-12 col-md-12 col-lg-10 mx-auto ">
+            <div class="row align-items-center">
+                <div class="col-sm-12 col-md-12 col-lg-4 me-auto">
+                    <h1 class="display-1">Get in <span class="green-text">Touch</span></h1>
+                    <p>Enim tempor eget pharetra facilisis sed maecenas adipiscing. Eu leo molestie vel,</p>
+                    <form class="row g-3 needs-validation" novalidate>
+                        <div class="col-12 pt-3">
+                            <input type="text" class="form-control" id="validationCustom01" placeholder="Name" required>
+                            <div class="invalid-feedback">
+                                This field is required.
+                            </div>
+                        </div>
+                        <div class="col-12 pt-3">
+                            <input type="email" class="form-control" id="validationCustom01" placeholder="Email"
+                                required>
+                            <div class="invalid-feedback">
+                                Please enter a vaild emailaddress
+                            </div>
+                        </div>
+                        <div class="col-12 pt-3">
+                            <input type="tel" class="form-control" id="validationCustom01" placeholder="Phone number"
+                                required>
+                        </div>
+                        <div class="col-12 pt-3">
+                            <textarea class="form-control" style="resize: none;" id="validationTextarea"
+                                placeholder="Message" required></textarea>
+                            <div class="invalid-feedback">
+                                This field is required.
+                            </div>
+                            <div class="valid-feedback">
+                                Thanks
+                            </div>
+                        </div>
+                        <div class="col-12 pt-3">
+                            <button class="btn green-bg w-100" type="submit">Get Started</button>
+                        </div>
+                    </form>
+                </div>
+                <div class="col-sm-12 col-md-12 col-lg-3 text-center">
+                    <img src="images/contact-us/50.png" class="img-fluid" alt="not-found">
+                </div>
+                <div class="col-sm-12 col-md-12 col-lg-5">
+                    <iframe
+                        src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d14036.941804275613!2d70.3314995!3d28.4121515!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x39375c0f3e943895%3A0xf236a8d6b01facb8!2sHello%20World%20Technologies!5e0!3m2!1sen!2s!4v1681800260145!5m2!1sen!2s"
+                        width="100%" height="500" style="border:0;" allowfullscreen="" loading="lazy"
+                        referrerpolicy="no-referrer-when-downgrade"></iframe>
+                </div>
+            </div>
+        </div>
+    </section>
+    <!-------------------get in touch Section end  --------------------->
+    <!------------------information Section start  -------------------->
+    <section class="container-fluid py-5 d-flex justify-content-center">
+        <div class="col-sm-12 col-md-12 col-lg-10 mx-auto ">
+            <div class="row align-items-center">
+                <div class="col-12 gray-bg p-5">
+                    <div class="row align-items-center">
+                        <div class="col-sm-12 col-md-12 col-lg-4">
+                            <div class="row align-items-center">
+                                <div class="col-2 text-center">
+                                    <i class="fa-solid fa-phone-volume green-text fa-3x"></i>
+                                </div>
+                                <div class="col-10">
+                                    <h4 class="m-0">PHONE</h4>
+                                    <a class="text-secondary" href="">
+                                        <p class="m-0 text-secondary">03 5432 1234</p>
+                                    </a>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="col-sm-12 col-md-12 col-lg-4">
+                            <div class="row align-items-center">
+                                <div class="col-2 text-center">
+                                    <i class="fa-solid fa-envelope-open-text green-text fa-3x"></i>
+                                </div>
+                                <div class="col-10">
+                                    <h4 class="m-0">EMAIL</h4>
+                                    <a class="text-secondary" href="">
+                                        <p class="m-0 text-secondary">info@fajira.com</p>
+                                    </a>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="col-sm-12 col-md-12 col-lg-4">
+                            <div class="row align-items-center">
+                                <div class="col-2 text-center">
+                                    <i class="fa-solid fa-location-dot green-text fa-3x"></i>
+                                </div>
+                                <div class="col-10">
+                                    <h4 class="m-0">Main Office Addres</h4>
+                                    <a class="text-secondary" href="">
+                                        <p class="m-0 text-secondary">Lorem ipsum dolor sit amet,consectetur
+                                            adipiscing elit,</p>
+                                    </a>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+    <!-------------------information Section end  --------------------->
+
+
+
+
     <!-----------------------------  Footer-end -------------------------->
     <section class="container-fluid py-5 d-flex justify-content-center">
         <div class="col-sm-12 col-md-12 col-lg-10 mx-auto py-5">
@@ -191,7 +309,8 @@
                     <li class="nav-item"><a href="#" class="nav-link px-5 fs-3 text-dark">How it Works</a></li>
                     <li class="nav-item"><a href="#" class="nav-link px-5 fs-3 text-dark">Faq’s</a></li>
                     <li class="nav-item"><a href="#" class="nav-link px-5 fs-3 text-dark">Blog</a></li>
-                    <li class="nav-item"><a href="contact-us.html" class="nav-link px-5 fs-3 text-dark">Contact us</a></li>
+                    <li class="nav-item"><a href="contact-us.html" class="nav-link px-5 fs-3 text-dark">Contact us</a>
+                    </li>
                 </ul>
                 <div class="col-sm-12 col-md-12 col-lg-2 text-lg-end">
                     <a href=""><i class="fa-brands fa-linkedin mx-3" style="color:rgba(70, 168, 34, 1);"></i></a>
