--- a/about-us.html
+++ b/about-us.html
@@ -175,6 +175,271 @@
         </div>
     </header>
     <!----------------------End NAvbar Section  ------------------------>
+
+    <!----------------------Home Section Start-------------------------->
+    <section class="container-fluid bg-hero py-5 d-flex justify-content-center">
+        <div class="col-sm-12 col-md-12 col-lg-10 mx-auto ">
+            <div class="row align-items-center row-h">
+                <div class="col-lg-5 col-md-12">
+                    <h1 class="display-1">At <span class="green-text">Fajira, </span> it’s not About us, it’s<span
+                            class="green-text"> All About YOU! </span></h1>
+                    <img src="images/about-us/hero-fajira/Layer_1.png" alt="not-found" class="img-fluid">
+                    <p class="pt-5">Sounds too dramatic? It’s not, because this is what has helped Fajira morph into a
+                        thriving global business entity from
+                        a humble startup idea in a matter of few years. Now we boast of hundreds of successful
+                        and happy clients all around the
+                        globe.</p>
+                </div>
+                <div class="col-lg-7 col-md-12  green-radial">
+                    <img src="images/about-us/hero-fajira/Frame 427319211.png" alt="not-found" class="img-fluid">
+                </div>
+            </div>
+        </div>
+    </section>
+    <!-----------------------------Home Section End---------------------------------->
+
+    <!---------------------- Introduce-Fajira Section Start-------------------------->
+    <section class="container-fluid py-5 d-flex justify-content-center">
+        <div class="col-sm-12 col-md-12 col-lg-10 mx-auto py-5">
+            <div class="row justify-content-between align-items-center">
+                <div class="col-12 text-center pb-3">
+                    <h1 class="display-2 position-relative pb-5">Let’s Introduce <span class="green-text">You</span> to
+                        <span class="green-text">Fajira!</span>
+                    </h1>
+                    <span class="position-absolute" style="top: 122px; right: 328px;"><img src="images/Layer_1.png"
+                            class="img-fluid" alt="not-found"></span>
+                </div>
+            </div>
+            <div class="row pt-5 align-items-center">
+                <div class="col-sm-12 col-md-12 col-lg-6 me-lg-auto">
+                    <img src="images/about-us/introduce-fajira!/Frame 427319211 (1).png" class="img-fluid"
+                        alt="not-found">
+                </div>
+                <div class="col-sm-12 col-md-12 col-lg-5">
+                    <h5 class="display-4">Lorem ipsum dolor sit amet, consectetur adipiscing elit,</h5>
+                    <p class="pt-5">Fajira is a contemporary ecommerce business management system designed to facilitate
+                        your
+                        customers access your business
+                        and place their orders through your websites and mobile apps.
+                        Our innovative business solution is aimed at helping your clients get the most convenient
+                        experience in interacting with
+                        you online, also ensuring your business a robust order management, delivery and tracking system.
+                    </p>
+                </div>
+            </div>
+        </div>
+    </section>
+    <!----------------------------- Introduce-Fajira Section End---------------------------------->
+
+    <!--------------------------- online-Businesses Section start---------------------------------->
+    <section class="container-fluid py-5 d-flex justify-content-center">
+        <div class="col-sm-12 col-md-12 col-lg-10 mx-auto py-5">
+            <div class="row justify-content-between align-items-center">
+                <div class="col-12 text-center pb-3">
+                    <h1 class="display-2 position-relative pb-5">What Kind of Online <span
+                            class="green-text">Businesses</span> Can Use Fajira?</h1>
+                    <span class="position-absolute" style="top: 115px; right: 150px;"><img
+                            src="images/about-us/businesses-fajira/Layer_1.png" class="img-fluid"
+                            alt="not-found"></span>
+                    <p class="para-align">our business solution is designed and developed to cater to the
+                        requirements of almost any type of retail business that wants to go online.</p>
+                </div>
+            </div>
+            <div class="row pt-5">
+                <div class="col-sm-12 col-md-12 col-lg-5">
+                    <p>From humble beginnings in 2016 to achieving an amazingly progressive global footprint by 2020,
+                        one of the major factors
+                        behind Fajira’s success has been the <span class="green-text fw-bold">UNIVERSAL FIT</span> of
+                        the
+                        Fajira, i.e. our business solution is
+                        designed and developed
+                        to cater to the requirements of almost any type of retail business that wants to go online.
+                        <span class="green-text fw-bold">You
+                            name it, we got it.</span>
+                    </p>
+                    <p>Given below are some of the areas Fajira excels in:
+                    </p>
+                    <ul class="ms-5 fs-3" type="dics">
+                        <li>Restaurants</li>
+                        <li>Grocery Stores</li>
+                        <li>E-commerce Stores</li>
+                        <li>Brands</li>
+                        <li>Watch Stores</li>
+                        <li>Electronics Stores</li>
+                        <li>Sports Equipment Stores</li>
+                        <li>Marts</li>
+                    </ul>
+                </div>
+                <div class="col-sm-12 col-md-12 col-lg-7">
+                    <img src="images/about-us/businesses-fajira/Frame 427319211 (2).png" class="img-fluid"
+                        alt="not-found">
+                </div>
+            </div>
+        </div>
+    </section>
+    <!----------------------------- online-Businesses Section End---------------------------------->
+
+    <!---------------------------- Global Footprint Section start---------------------------------->
+    <section class="container-fluid py-5 d-flex justify-content-center">
+        <div class="col-sm-12 col-md-12 col-lg-10 mx-auto py-5">
+            <div class="row justify-content-between align-items-center">
+                <div class="col-12 text-center pb-3">
+                    <h1 class="display-2 position-relative pb-5">Fajira’s <span class="green-text">Global
+                            Footprint</span> </h1>
+                    <span class="position-absolute" style="top: 115px; right: 335px;"><img
+                            src="images/about-us/global-footprint/Layer_1.png" class="img-fluid" alt="not-found"></span>
+                    <p class="para-align">Fajira is currently operating in all major countries of the world, helping an
+                        ever-growing number and type of businesses achieve up o <span class="fw-bold green-text">400%
+                            annual growth.</span></p>
+                </div>
+            </div>
+            <div class="row pt-3 justify-content-center">
+                <div class="col-3" data-tooltip="dumy"><img src="images/about-us/global-footprint/flag (1).png"
+                        class="img-fluid" alt="not-found">
+                </div>
+                <div class="col-3" data-tooltip="dumy"><img src="images/about-us/global-footprint/flag (2).png"
+                        class="img-fluid" alt="not-found">
+                </div>
+                <div class="col-3" data-tooltip="dumy"><img src="images/about-us/global-footprint/flag (3).png"
+                        class="img-fluid" alt="not-found">
+                </div>
+            </div>
+            <div class="row pt-3 justify-content-center">
+                <div class="col-3" data-tooltip="dumy"><img src="images/about-us/global-footprint/flag (5).png"
+                        class="img-fluid" alt="not-found">
+                </div>
+                <div class="col-3" data-tooltip="dumy"><img src="images/about-us/global-footprint/flag (6).png"
+                        class="img-fluid" alt="not-found">
+                </div>
+                <div class="col-3" data-tooltip="dumy"><img src="images/about-us/global-footprint/flag (7).png"
+                        class="img-fluid" alt="not-found">
+                </div>
+                <div class="col-3" data-tooltip="dumy"><img src="images/about-us/global-footprint/flag (8).png"
+                        class="img-fluid" alt="not-found">
+                </div>
+            </div>
+            <div class="row pt-3 justify-content-center">
+                <div class="col-3" data-tooltip="dumy"><img src="images/about-us/global-footprint/flag (9).png"
+                        class="img-fluid" alt="not-found">
+                </div>
+                <div class="col-3" data-tooltip="dumy"><img src="images/about-us/global-footprint/flag (10).png"
+                        class="img-fluid" alt="not-found">
+                </div>
+                <div class="col-3" data-tooltip="dumy"><img src="images/about-us/global-footprint/flag (11).png"
+                        class="img-fluid" alt="not-found">
+                </div>
+            </div>
+            <div class="row pt-3 justify-content-center">
+                <div class="col-3" data-tooltip="dumy"><img src="images/about-us/global-footprint/flag (12).png"
+                        class="img-fluid" alt="not-found">
+                </div>
+                <div class="col-3" data-tooltip="dumy"><img src="images/about-us/global-footprint/flag (13).png"
+                        class="img-fluid" alt="not-found">
+                </div>
+                <div class="col-3" data-tooltip="dumy"><img src="images/about-us/global-footprint/falg-4.png"
+                        class="img-fluid" alt="not-found">
+                </div>
+                <div class="col-3" data-tooltip="dumy"><img src="images/about-us/global-footprint/flag (16).png"
+                        class="img-fluid" alt="not-found">
+                </div>
+            </div>
+            <div class="col-12 text-center">
+                <h1>This isn’t it Yet, It was <span class="fw-bold green-text">Just a Glimpse...</span></h1>
+            </div>
+        </div>
+    </section>
+    <!------------------------------- Global Footprint Section End---------------------------------->
+
+    <!--------------------------- All of Your Needs Section start---------------------------------->
+    <section class="container-fluid py-5 d-flex justify-content-center">
+        <div class="col-sm-12 col-md-12 col-lg-10 mx-auto py-5">
+            <div class="row justify-content-between align-items-center">
+                <div class="col-12 text-center pb-3">
+                    <h1 class="display-2 position-relative pb-5">Solutions That Fit <span class="green-text">All of Your
+                            Needs</span></h1>
+                    <span class="position-absolute" style="top: 112px; right: 268px;"><img
+                            src="images/about-us/businesses-fajira/Layer_1.png" class="img-fluid"
+                            alt="not-found"></span>
+                    <p class="para-align">Lorem ipsum dolor sit amet, consectetur adipiscing elit, Lorem ipsum dolor sit
+                        amet, consectetur adipiscing elit, Lorem
+                        ipsum dolor sit amet, consectetur adipiscing elit,</p>
+                </div>
+            </div>
+            <div class="row pt-5">
+            </div>
+            <div class="col-12 text-center">
+                <h1><span class="fw-bold green-text">Impressive!</span> Right?</h1>
+                <p class="fs-1">You can order your custom Apps if you want to go beyond these options.</p>
+                <button class="btn green-bg mt-5">Contact Us</button>
+            </div>
+        </div>
+    </section>
+    <!----------------------------- All of Your Needs Section End---------------------------------->
+
+    <!--------------------------- Our Support Team  Section start---------------------------------->
+    <section class="container-fluid py-5 d-flex justify-content-center">
+        <div class="col-sm-12 col-md-12 col-lg-10 mx-auto py-5">
+            <div class="row justify-content-between align-items-center">
+                <div class="col-12 text-center pb-3">
+                    <h1 class="display-2 position-relative pb-5">Our <span class="green-text">Support Team</span></h1>
+                    <span class="position-absolute" style="top: 119px;right: 385px;"><img
+                            src="images/about-us/spourt-team/Layer_1.png" class="img-fluid" alt="not-found"></span>
+                    <p>Fajira’s highly skillful, experienced and dynamic resource pool has
+                        been the
+                        major contributor behind the phenomenal
+                        success of this innovative online business management solution. It comprises of 30 dedicated
+                        product-focused team
+                        members stationed in-house and 20 sales-oriented team members scattered around the world,
+                        segmented into the following
+                        departments.</p>
+                </div>
+            </div>
+            <div class="row pt-5">
+            </div>
+            <div class="col-8 text-center mx-auto">
+                <h2 class="display-3">Remember when we said it All <span class="fw-bold green-text">About You?</span>
+                    Here we are just proving that.</h2>
+            </div>
+        </div>
+    </section>
+    <!----------------------------- Our Support Team Section End---------------------------------->
+
+    <style>
+
+    </style>
+    <!---------------------  Subscribe Newsletter-start ------------------->
+    <section class="container-fluid py-5 d-flex justify-content-center">
+        <div class="col-sm-12 col-md-12 col-lg-10 mx-auto py-5">
+            <div class="bg-subscribe">
+                <div class="position-relative">
+                    <img src="images/subscribe/Group 427319232.png" class="img-fluid position-absolute"
+                        style="top: -23px; bottom: 0; right:-45px;" alt="not-found">
+                </div>
+                <div class="row justify-content-center align-items-center row-suscribe">
+                    <div class="col-sm-12 col-md-12 col-lg-8 text-center">
+                        <h1 class="display-1 text-white">Subscribe Newsletter</h1>
+                        <p class="text-white">Subscribe to get information, latest
+                            news and other
+                            interesting
+                            offers
+                            about Fajira.</p>
+                    </div>
+                    <div class="col-sm-12 col-md-12 col-lg-7 text-center">
+                        <form action="">
+                            <input type="email" class="input-sus" placeholder="Your Email">
+                            <button class="Subscribe-btn" type="submit">Subscribe</button>
+                        </form>
+                    </div>
+                    <div class="col-12 d-flex text-center justify-content-start px-4 align-items-center">
+                        <i class="fa-regular fa-face-smile mx-2 text-white fa-2x"></i>
+                        <i class="fa-regular fa-envelope-open mx-2 text-white fa-2x"></i>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+    <!---------------------  Subscribe Newsletter-end -------------------->
+
     <!-----------------------------  Footer-end -------------------------->
     <section class="container-fluid py-5 d-flex justify-content-center">
         <div class="col-sm-12 col-md-12 col-lg-10 mx-auto py-5">
@@ -187,7 +452,8 @@
                     <li class="nav-item"><a href="#" class="nav-link px-5 fs-3 text-dark">How it Works</a></li>
                     <li class="nav-item"><a href="#" class="nav-link px-5 fs-3 text-dark">Faq’s</a></li>
                     <li class="nav-item"><a href="#" class="nav-link px-5 fs-3 text-dark">Blog</a></li>
-                    <li class="nav-item"><a href="contact-us.html" class="nav-link px-5 fs-3 text-dark">Contact us</a></li>
+                    <li class="nav-item"><a href="contact-us.html" class="nav-link px-5 fs-3 text-dark">Contact us</a>
+                    </li>
                 </ul>
                 <div class="col-sm-12 col-md-12 col-lg-2 text-lg-end">
                     <a href=""><i class="fa-brands fa-linkedin mx-3" style="color:rgba(70, 168, 34, 1);"></i></a>
