--- a/index.html
+++ b/index.html
@@ -799,7 +799,7 @@
                 </div>
                 <div class="row justify-content-center align-items-center row-suscribe">
                     <div class="col-sm-12 col-md-12 col-lg-8 text-center">
-                        <h1 class="display-lg-2 text-white">Subscribe Newsletter</h1>
+                        <h1 class="display-2 text-white">Subscribe Newsletter</h1>
                         <p class="text-white">Subscribe to get information, latest
                             news and other
                             interesting
