--- a/index.html
+++ b/index.html
@@ -830,10 +830,11 @@
                     <img src="images/logo.png" class="img-fluid" alt="not-found">
                 </a>
                 <ul class="nav col-sm-12 col-md-12 col-lg-6 justify-content-lg-end">
-                    <li class="nav-item"><a href="#" class="nav-link px-5 fs-3 text-dark">How it Works</a></li>
-                    <li class="nav-item"><a href="#" class="nav-link px-5 fs-3 text-dark">Faq’s</a></li>
-                    <li class="nav-item"><a href="#" class="nav-link px-5 fs-3 text-dark">Blog</a></li>
-                    <li class="nav-item"><a href="contact-us.html" class="nav-link px-5 fs-3 text-dark">Contact us</a></li>
+                    <li class="nav-item"><a href="#" class="nav-link px-3 fs-4 text-dark">How it Works</a></li>
+                    <li class="nav-item"><a href="#" class="nav-link px-3 fs-4 text-dark">Faq’s</a></li>
+                    <li class="nav-item"><a href="#" class="nav-link px-3 fs-4 text-dark">Blog</a></li>
+                    <li class="nav-item"><a href="contact-us.html" class="nav-link px-3 fs-4 text-dark">Contact us</a>
+                    </li>
                 </ul>
                 <div class="col-sm-12 col-md-12 col-lg-2 text-lg-end">
                     <a href=""><i class="fa-brands fa-linkedin mx-3" style="color:rgba(70, 168, 34, 1);"></i></a>
