--- a/index.html
+++ b/index.html
@@ -232,22 +232,22 @@
                 </div>
             </div>
         </div>
-        <div class="home-demo py-4 slider-color">
+        <div class="home-demo">
             <div class="owl-carousel owl-theme">
                 <div class="item">
-                    <img src="images/clients/Delicioso.png" alt="not-found" class="img-fluid">
+                    <img src="images/clients/clients (1).png" alt="not-found clients-hover" class="img-fluid">
                 </div>
                 <div class="item">
-                    <img src="images/clients/Food Directly.png" alt="not-found" class="img-fluid">
+                    <img src="images/clients/clients (2).png" alt="not-found" class="img-fluid">
                 </div>
                 <div class="item">
-                    <img src="images/clients/Group 2291.png" alt="not-found" class="img-fluid">
+                    <img src="images/clients/clients (3).png" alt="not-found" class="img-fluid">
                 </div>
                 <div class="item">
-                    <img src="images/clients/Paragon.png" alt="not-found" class="img-fluid">
+                    <img src="images/clients/clients (4).png" alt="not-found" class="img-fluid">
                 </div>
                 <div class="item">
-                    <img src="images/clients/Splintr.png" alt="not-found" class="img-fluid">
+                    <img src="images/clients/clients (5).png" alt="not-found" class="img-fluid">
                 </div>
             </div>
         </div>
@@ -274,8 +274,8 @@
                         is a contemporary <span class="green-text fw-bold text-decoration-underline">Online
                             Ordering System</span> designed to facilitate your customers access your
                         business and place their orders through your websites and mobile apps.</p>
-                    <a href="#" class="btn green-bg mt-5">Learn More <img
-                            src="images/what-fajira/external-link.png" alt="not-found" class="img-fluid"></a>
+                    <a href="#" class="btn green-bg mt-5">Learn More <img src="images/what-fajira/external-link.png"
+                            alt="not-found" class="img-fluid"></a>
                 </div>
                 <div class="col-lg-5 col-md-6 col-sm-12 offset-lg-1  py-3">
                     <div class="row pb-4">
@@ -484,22 +484,22 @@
                     <p class="fs-2">Every <span class="green-text fw-bold">Fajira</span> Product is versatile &
                         is Compatible with all Consumer Platforms known to date.</p>
                     <div class="wrapper">
-                        <div class="buttonWrapper">
-                            <button class="tab-button active" data-id="android">
-                                <img src="images/Platform Potential/icons (1).png" data-id="android" class="img-fluid"
-                                    alt="not-found">
+                        <div class="buttonWrapper py-5">
+                            <button class="bg-transparent border-0">
+                                <img src="images/Platform Potential/icons (2).png" data-id="android"
+                                    class="img-fluid tab-button active" alt="not-found">
                             </button>
-                            <button class="tab-button" data-id="apple">
-                                <img src="images/Platform Potential/icons (2).png" data-id="apple" class="img-fluid"
-                                    alt="not-found">
+                            <button class="bg-transparent border-0">
+                                <img src="images/Platform Potential/icons (3).png" data-id="apple"
+                                    class="img-fluid tab-button" alt="not-found">
                             </button>
-                            <button class="tab-button" data-id="window">
-                                <img src="images/Platform Potential/icons (3).png" data-id="window" class="img-fluid"
-                                    alt="not-found">
+                            <button class="bg-transparent border-0">
+                                <img src="images/Platform Potential/icons (4).png" data-id="window"
+                                    class="img-fluid tab-button" alt="not-found">
                             </button>
-                            <button class="tab-button" data-id="linuex">
-                                <img src="images/Platform Potential/icons (4).png" data-id="linuex"
-                                    class="img-fluid icons" alt="not-found">
+                            <button class="bg-transparent border-0">
+                                <img src="images/Platform Potential/icons (1).png" data-id="linuex"
+                                    class="img-fluid tab-button" alt="not-found">
                             </button>
                         </div>
                         <div class="contentWrapper">
@@ -558,8 +558,8 @@
                             class="green-text fw-bold">50+
                             integrations,</span> seamlessly integrating with software and
                         applications for increased workflow efficiency.</p>
-                    <a href="#" class="btn green-bg mt-5">Explore All<img
-                            src="images/what-fajira/external-link.png" alt="not-found" class="img-fluid mx-3"></a>
+                    <a href="#" class="btn green-bg mt-5">Explore All<img src="images/what-fajira/external-link.png"
+                            alt="not-found" class="img-fluid mx-3"></a>
                 </div>
                 <div class="col-sm-12 col-md-12 col-lg-6 offset-lg-1">
                     <img src="images/Integrations/Group 427319120.png" class="img-fluid" alt="not-found">
